# bupt-rs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  GITHUB_USAGE.md  LICENSE  README.md
src/: http_client.rs  lib.rs
src/life/: api.rs  auth.rs  mod.rs  types.rs
src/ucloud/: api.rs  auth.rs  mod.rs  types.rs
src/utils/: mod.rs  tools.rs  types.rs  utils.rs
src/xinximenhu/: api.rs  auth.rs  mod.rs
src/ydjw/: api.rs  auth.rs  mod.rs
