[package]
name = "bupt-rs"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
image = "0.25.6"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "cookies","rustls-tls", "http2", "charset", "macos-system-configuration"], optional = true }
rqrr = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
tauri = { version = "2", features = [], optional = true}
tauri-plugin-http = { version= "2", optional = true, features = ["cookies", "json"] } # 请检查最新版本
aes = "0.8.4"
base64 = "0.22.1"
cbc = "0.1.2"
ecb = "0.1.2"


[features]
default = ["reqwest"]
tauri =  ["dep:tauri", "dep:tauri-plugin-http"]
